--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,5 @@
  *= require_tree .
  *= require_self
  */
+@import 'react-wood-duck/dist/styles/application.css';
+@import 'bootstrap/dist/css/bootstrap.css';
